--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>Hello, friends!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>My Crappy Website</title>
+	<meta charset="utf-8">
+	<link href="main.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+	<h1>Welcome To My Crappy Little Website</h1>
+	<h3>Hellow, friends!</h3>
+	<p>The website you are currently viewing is a project site and is not intended to be taken seriously (you probably figured that out already). To be honest, I don't really know where I'm going with this. This web page is going to consist mostly of filler text and maybe an image or two. Prepare to be underwhelmed!</p>
+</body>
+</html>
