--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
 	<title>My Crappy Website</title>
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
+	<meta name=viewport content="width=device-width, initial-scale=1">
 	<link href="main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<h1>Welcome To My Crappy Little Website</h1>
-	<h3>Hellow, friends!</h3>
+	<h3>Hello, friends!</h3>
 	<p>The website you are currently viewing is a project site and is not intended to be taken seriously (you probably figured that out already). To be honest, I don't really know where I'm going with this. This web page is going to consist mostly of filler text and maybe an image or two. Prepare to be underwhelmed!</p>
+	<h3>What Can You Expect To Find Here?</h3>
+	<p>Nothing really. This web page is a work in progress.</p>
 </body>
 </html>
