--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
 	<meta charset="UTF-8">
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<link href="main.css" rel="stylesheet" type="text/css">
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-85990309-1', 'auto');
+  ga('send', 'pageview');
+
+	</script>
 </head>
 <body>
-	<h1>Welcome To My Crappy Little Website</h1>
+	<h1>Welcome To My First Website</h1>
 	<h3>Hello, friends!</h3>
 	<p>The website you are currently viewing is a project site and is not intended to be taken seriously (you probably figured that out already). To be honest, I don't really know where I'm going with this. This web page is going to consist mostly of filler text and maybe an image or two. Prepare to be underwhelmed!</p>
 	<h3>What Can You Expect To Find Here?</h3>
