--- a/index.html
+++ b/index.html
@@ -22,32 +22,32 @@
 
 		<main>
 			<div class="jumbotron">
-				<h2 class="headline">Hi there,<br> I'm web developer based in Los Angeles, CA</h2>
+				<h2 class="headline">Hi there,<br> I'm a web developer based in Los Angeles, CA</h2>
 			</div>
 			<div class="container">
 				<section class="about-me col">
 					<h3>About Me</h3>
-					<p>Okay I'm not really a web developer. At least not yet. And I'm located in Bellflower, a suburb of Los Angeles.</p>
-					<p>So who am I? I'm just some random dude trying to learn front-end web development on his own.</p>
-					<p>When I'm not learning how to code, I'm playing soccer or video games.</p>
+					<p>Okay, I'm not really a web developer. Not yet at least. And I'm located in Bellflower, a suburb of Los Angeles.</p>
+					<p>Who am I? I'm a dude with a passion for learning and creating things. I'm taking a crack at learning front-end web development via online courses and other resources.</p>
+					<p>When I'm not learning how to code, I'm reading a blog, kicking a soccer ball, or playing video games.</p>
 				</section>
 				<section class="experience col">
 					<h3>Experience</h3>
 					<p>For the past couple years, I've worked in E-Commerce handling everything from social media and SEO to customer service and web analytics.</p>
-					<p>I am now steering my career towards front-end web development. My focus thus far has been on the following web technologies.</p>
+					<p>I am now steering my career towards front-end web development. My focus thus far has been on the following web technologies:</p>
 					<ul>
 						<li>HTML</li>
 						<li>CSS</li>
 						<li>JavaScript</li>
 					</ul>
-					<p>I encourage you to check out my <a href="portfolio.html">portfolio</a> to see my projects</p>
+					<p>I encourage you to check out my <a href="portfolio.html">portfolio</a> to see my projects.</p>
 				</section>
 				<section class="contact col">
 					<h3>Contact</h3>
-					<p>I'm currently looking for freelance work, so shoot me an email or give me a call if you want to work on a project together</p>
+					<p>I'm currently looking for freelance work, so shoot me an email or give me a call if you want to work on a project together or you know someone who needs a site designed.</p>
 					<ul>
-						<li><img src="img/mail.svg" alt="mail.svg"><a href="mailto:fakeaddress@email.com">fakeaddress@email.com</a></li>
-						<li><img src="img/phone.svg" alt="phone icon"><a href="tel:1-555-555-5555">555-555-5555</a></li>
+						<li><a href="mailto:fakeaddress@email.com"><img src="img/mail.svg" alt="mail.svg">fakeaddress@email.com</a></li>
+						<li><a href="tel:1-555-555-5555"><img src="img/phone.svg" alt="phone icon">555-555-5555</a></li>
 				</section>
 			</div>
 		</main>
